// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots XY-Grid Grid cell will take up the remaining space 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gErIwn"
  >
    4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 6/8/2 and 6/4/10 cells 1`] = `
<div
  className="gc-grid-y XYGridElement-sc-11ht4j5-0 kVkjUr"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ehOdtu"
  >
    6/8/2 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 eHXMyw"
  >
    6/4/10 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 12/6/4 and 12/6/8 cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 eFehCP"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 goxaQh"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with a full width cell 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ePEyAR"
  >
    full width cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 ePEyAR"
  >
    full width cell
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with two 6 small cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ecZjQA"
  >
    6 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 ecZjQA"
  >
    6 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid Multiple expanding cells will share the leftover space equally. 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gErIwn"
  >
    4 cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid Shrink means it will only take up the space its contents need 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hjLzdu"
  >
    Shrink!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Expand!
  </div>
</div>
`;

exports[`Storyshots XY-Grid To switch back to the auto behavior from a percentage or shrink behavior 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    One
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    Two
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    Three
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    Four
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    Five
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 iLpdLJ"
  >
    Six
  </div>
</div>
`;
